kubectl/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tween-web-app-service
spec:
  selector:
    app: tween-web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
