kubectl/ingress.yaml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tween-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: route
spec:
  rules:
  - host: tween-web-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tween-web-app-service
            port:
              number: 80
